--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,9 +1,17 @@
-FROM jenkins:1.642.1
+FROM jenkins:1.651.3
 
 USER root
 RUN apt-get update \
       && apt-get install -y sudo \
       && rm -rf /var/lib/apt/lists/*
+RUN sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
+RUN echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" | sudo tee /etc/apt/sources.list.d/docker.list
+RUN sudo apt-get update \
+      && apt-cache policy docker-engine \
+      && apt-get install -y docker-engine \
+      && sudo systemctl status docker \
+      && sudo usermod -aG docker $(whoami) \
+      && sudo usermod -aG docker username/*
 RUN echo "jenkins ALL=NOPASSWD: ALL" >> /etc/sudoers
 USER jenkins
 
