--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -3,7 +3,7 @@ FROM jenkins:1.651.3
 USER root
 RUN apt-get update \
       && apt-get install -y sudo \
-      && apt-get install apt-transport-https apt-utils
+      && apt-get install -y apt-transport-https apt-utils
       && rm -rf /var/lib/apt/lists/*
 RUN sudo apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D
 RUN echo "deb https://apt.dockerproject.org/repo ubuntu-xenial main" | sudo tee /etc/apt/sources.list.d/docker.list
