--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,9 +1,10 @@
 FROM jenkins:1.651.3
 
 USER root
-RUN apt-get update && apt-get install -y sudo \
+RUN apt-get update && apt-get install -y --fix-missing sudo \
       apt-transport-https \
       apt-utils \
+      lxc \
       && rm -rf /var/lib/apt/lists/*
 RUN echo "jenkins ALL=NOPASSWD: ALL" >> /etc/sudoers
 USER jenkins
