dependency for DiD

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,11 @@ services:
     - /var/run/docker.sock:/var/run/docker.sock
     - /usr/bin/docker:/usr/bin/docker
     - /usr/lib/x86_64-linux-gnu/libapparmor.so.1:/usr/lib/x86_64-linux-gnu/libapparmor.so.1
+    - /usr/lib64/libsystemd-journal.so.0:/usr/lib/libsystemd-journal.so.0
+    - /usr/lib64/libsystemd-id128.so.0:/usr/lib/libsystemd-id128.so.0
+    - /usr/lib64/libdevmapper.so.1.02:/usr/lib/libdevmapper.so.1.02
+    - /usr/lib64/libgcrypt.so.11:/usr/lib/libgcrypt.so.11
+    - /usr/lib64/libdw.so.1:/usr/lib/libdw.so.1
   depends_on:
     - nexus
     - gitlab
